# opentera-dashboards-service

./: .gitignore  .gitmodules  CMakeLists.txt  ConfigManager.py  DashboardsService.json  DashboardsService.py  FlaskModule.py  Globals.py  README.md  pyproject.toml  requirements.txt
API/user/: QueryDashboard.py
Frontend/DashboardsViewer/: CMakeLists.txt  DashboardsViewer.qmlproject  DashboardsViewer.qmlproject.qtds  DashboardsViewer.qmlproject.qtds.1df10fa  main.qml  qmlmodules
Frontend/DashboardsViewer/content/: App.qml  CMakeLists.txt  Dashboard.qml  DashboardForm.ui.qml  Login.qml  LoginForm.ui.qml  OnlineParticipant.qml  OnlineParticipantForm.ui.qml  Screen01.ui.qml
Frontend/DashboardsViewer/content/dataSources/: BaseDataSource.qml  FetchDataSource.qml  FileDownloadDataSource.qml  ParticipantListDataSource.qml  ParticipantSessionListDataSource.qml
Frontend/DashboardsViewer/content/data_sources/: FetchDataSource.qml
Frontend/DashboardsViewer/content/delegates/: BaseDelegate.qml  DashboardDelegate.qml  GenericItemDelegate.qml  ParticipantDelegate.qml  SessionDelegate.qml  SiteProjectDelegate.qml
Frontend/DashboardsViewer/content/layouts/: 3ColumnsLayout.qml  3RowsLayout.qml  BaseLayout.qml  CenteredColumnLayout.qml  CenteredRowLayout.qml  FlowLayout.qml  ThreeColumnsLayout.qml  ThreeRowsLayout.qml
Frontend/DashboardsViewer/content/screens/: Dashboard.qml  DashboardForm.ui.qml  DashboardSelector.qml  DashboardSelectorForm.ui.qml  Login.qml  LoginForm.ui.qml  ProjectSelector.qml  ProjectSelectorForm.ui.qml
Frontend/DashboardsViewer/content/ui/: BasicButton.ui.qml  BasicDialog.qml  FlickableScrollBar.qml
Frontend/DashboardsViewer/content/widgets/: BaseWidget.qml  ButtonWidget.qml  ClockWidget.qml  ListViewWidget.qml  ParticipantList.qml  ParticipantListWidget.qml  SessionViewerWidget.qml
Frontend/DashboardsViewer/imports/: CMakeLists.txt
Frontend/DashboardsViewer/imports/DashboardsViewer/: CMakeLists.txt  Constants.qml  qmldir
Frontend/DashboardsViewer/imports/DashboardsViewer/designer/: plugin.metainfo
Frontend/DashboardsViewer/qml_cpp_modules/: CMakeLists.txt
Frontend/DashboardsViewer/qml_cpp_modules/config_parser/src/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h
Frontend/DashboardsViewer/resources/: CMakeLists.txt  DashboardsViewerApp.qrc
Frontend/DashboardsViewer/resources/json/: TestDashboard.json  TestDashboardv2.json
Frontend/DashboardsViewer/src/: import_qml_plugins.h  main.cpp
Frontend/DashboardsViewer/submodules/: CMakeLists.txt
config/: DashboardsService.json
config/nginx/: opentera-dashboards-service.conf
docker/dashboards-service-dev/: docker_compose.yml
docker/dashboards-service-dev/certificates/: Dockerfile
docker/dashboards-service-dev/dashboards-service/: DashboardsService.json  Dockerfile  iceServers.json
docker/dashboards-service-dev/db/: init.sql
docker/dashboards-service-dev/nginx/: nginx.conf  opentera-dashboards-service.conf  opentera.conf
docker/dashboards-service-dev/teraserver/: Dockerfile  FileTransferService.json  LoggingService.json  VideoRehabService.json
docker/dashboards-service-tests/: docker_compose.yml
docker/dashboards-service-tests/nginx/: Dockerfile  nginx.conf
docker/dashboards-service-tests/teraserver/: Dockerfile  FileTransferService.json  LoggingService.json  TeraServerConfig.ini
docs/: UI_Mockup.drawio
libDashboards/db/: DBManager.py
libDashboards/db/models/: BaseModel.py  DashDashboardProjects.py  DashDashboardSites.py  DashDashboardVersions.py  DashDashboards.py  __init__.py
static/: default_index.html  file_download.js
templates/: dashboards.html
tests/: BaseDashboardsAPITest.py  FakeDashboardsService.py  test_docker_test_setup.py
tests/api/user/: test_QueryDashboard.py
translations/en/LC_MESSAGES/: dashboards_service.po
translations/fr/LC_MESSAGES/: dashboards_service.po
utils/: setup_dashboards_service_run_once.py  setup_test_project.py
views/: Dashboards.py  Index.py
